Added implementation for Google sign in and initial package structure.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Social Login</string>
+    <string name="web_client_id">1035914181681-7t73a9rvlapmijsriops8jnldi637ibg.apps
+        .googleusercontent.com</string>
 </resources>
